# hexagonal

./: .gitignore  README.md  clean.md  dvc.yaml  environment.yml  justfile  main.md  package-lock.json  package.json  params.yaml  prepare_release  productions.md  pyproject.toml  sources.md  spec.toml  types.md
.dvc/: config
data/: .gitignore  spec.toml
data/01_raw/: 2012-presidentielle-bureau_de_vote.csv.dvc  2017-presidentielle-1-bureau_de_vote.csv.dvc  2017-presidentielle-2-bureau_de_vote.csv.dvc  2019-europeenne-bureau_de_vote.csv.dvc  2020-municipales-1-bureau_de_vote.csv.dvc  2020-municipales-1-bureau_de_vote_avant_correction.csv.dvc  2021-regionales-1-bureau_de_vote.csv.dvc  2021-regionales-2-bureau_de_vote.csv.dvc  2022-legislatives-1-bureau_de_vote.csv.dvc  2022-legislatives-1-candidats.csv.dvc  2022-legislatives-1-circonscription.csv.dvc  2022-legislatives-1-nuances-legis-2022.csv.dvc  2022-legislatives-1-nuances-lemonde.csv.dvc  2022-legislatives-2-bureau_de_vote.csv.dvc  2022-legislatives-2-candidats.csv.dvc  2022-legislatives-nuances-legis-2022.csv.dvc  2022-presidentielle-1-circonscription.csv.dvc  2022-presidentielle-2-bureau_de_vote.csv.dvc  2022-presidentielle-2-circonscription.csv.dvc  2024-europeenne-bureau_de_vote.csv.dvc  2024-europeenne-circonscription.csv.dvc  2024-europeenne-circos.csv.dvc  2024-legislatives-1-bureau_de_vote.csv.dvc  2024-legislatives-1-circonscription.csv.dvc  2024-legislatives-1-circos.csv.dvc  2024-legislatives-1-nfp-sensibilites.csv.dvc  2024-legislatives-1-nuances-lfi.csv.dvc  2024-legislatives-2-bureau_de_vote.csv.dvc  2024-legislatives-2-circonscription.csv.dvc  2024-legislatives-2-circos.csv.dvc  assemblee-nationale.zip.dvc  assemblee-nationale.zip.toml  cog.zip.dvc  cog.zip.toml  epci.xlsx.dvc  epci.xlsx.toml  insee_circonscriptions_legislatives.zip.dvc  insee_circonscriptions_legislatives.zip.toml  ne_10m_admin_0_countries.zip.dvc  population-municipale.xlsx.dvc  (+1 more)
data/02_clean/: codes_postaux.csv.toml  communes_epci.csv.toml  epci.csv.toml  population_municipale.csv.toml
data/03_main/: codes_postaux.csv.toml
sources/resultats/: 2017-legislatives-2.csv.dvc  2017-presidentielle-1.csv.dvc  2017-presidentielle-2.csv.dvc  2020-municipales-1.csv.dvc  2020-municipales-2.csv.dvc  2021-departementales-2.csv.dvc  2021-regionales-1.csv.dvc  2022-presidentielle-2.csv.dvc  2024-legislatives-1.csv.dvc  2024-legislatives-2.csv.dvc
src/: nomenclatures.md
src/hexagonal/: codes.py  plm.py  (+6 more)
(+366 files in other folders)
