[tool.poetry]
name = "hexagonal"
version = "0.1.0"
description = ""
authors = ["Salomé Cheysson <salome@cheysson.fr>"]
readme = "README.md"
packages = [
  { include = "hexagonal", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
glom = "^24.11.0"
json-stream = "^2.3.2"

[tool.poetry.group.dev.dependencies]
ipython = "^8.26.0"
black = "^24.8.0"
dvc = "^3.55.2"
dvc-s3 = "^3.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
