[tool.hexagonal]
s3_root = "s3://hexagonal-data/"
http_root = "https://hexagonal-data.s3.eu-west-3.amazonaws.com"

[project]
name = "hexagonal"


[tool.poetry]
name = "hexagonal"
version = "0.1.0"
description = ""
authors = ["Salomé Cheysson <salome@cheysson.fr>"]
readme = "README.md"
packages = [
  { include = "hexagonal", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
glom = "^24.11.0"
json-stream = "^2.3.2"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
ipython = "^8.26.0"
black = "^24.8.0"
dvc = "^3.55.2"
dvc-s3 = "^3.2.0"
pytest = "^8.3.4"
tomlkit = "^0.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
